词典: 增补拉取请求相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -264,12 +264,17 @@
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
     "compare": "对比",
-    "comparing changes": "差异比对",
+    "comparing changes": "比对差异",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
     "compare across forks": "跨复刻比较",
+    "compare changes": "比对差异",
+    "compare changes across branches, commits, tags, and more below. if you need to, you can also": "比对不同分支、提交、标签等的差异。如果需要，你也可以",
+    "choose different branches or forks above to discuss and review changes.": "在上方选择其他分支或复刻以讨论和查看更改。",
+    "learn about pull requests": "了解拉取请求",
     "create pull request": "创建拉取请求",
     "comments": "评论",
     "files changed": "文件变更",
+    "commit comments": "评论",
     "allow edits by maintainers": "允许维护者进行编辑",
     "open a pull request": "打开一个拉取请求",
     "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，你也可以",
@@ -277,6 +282,7 @@
     "these branches can be automatically merged.": "这些分支可以自动合并。",
     "checking mergeability…": "检查可合并性…",
     "can’t automatically merge.": "无法自动合并。",
+    "view pull request": "查看拉取请求",
     "reviewers": "审核人",
     "linked issues": "关联议题",
     "participant": "参与者",
