词典: 增补拉取请求相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -278,18 +278,26 @@
     "allow edits by maintainers": "允许维护者进行编辑",
     "open a pull request": "打开一个拉取请求",
     "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，你也可以",
+    "checking mergeability…": "检查可合并性…",
     "able to merge.": "可以合并。",
     "these branches can be automatically merged.": "这些分支可以自动合并。",
-    "checking mergeability…": "检查可合并性…",
     "can’t automatically merge.": "无法自动合并。",
+    "don’t worry, you can still create the pull request.": "别担心，你仍然可以创建拉取请求。",
+    "discuss and review the changes in this comparison with others.": "与他人讨论并回顾此次对比中的变化。",
+    "open a pull request that is ready for review": "打开一个拉取请求，以供审查",
+    "create draft pull request": "创建拉取请求草案",
+    "cannot be merged until marked ready for review": "在标记为可供审查之前，不能合并",
+    "draft pull request": "拉取请求草案",
     "view pull request": "查看拉取请求",
     "reviewers": "审核人",
     "linked issues": "关联议题",
     "participant": "参与者",
     "participants": "参与者",
     "close pull request": "关闭拉取请求",
+    "reopen pull request": "重新打开拉取请求",
     "conversation": "对话",
     "checks": "检查",
+    "new changes since you last viewed": "自您上次查看以来的新变化",
     "view changes": "查看更改",
     "outdated": "已过时",
     "resolve conversation": "解决对话",
@@ -300,6 +308,10 @@
     "hide resolved": "隐藏已解决",
     "show all reviewers": "显示所有审核人",
     "hide all reviewers": "隐藏所有审核人",
+    "show all checks": "显示所有检查",
+    "hide all checks": "隐藏所有检查",
+    "details": "细节",
+    "view details": "查看细节",
     "reference in new issue": "引用到新议题",
     "title": "标题",
     "body": "内容",
@@ -314,6 +326,37 @@
     "request changes": "请求更改",
     "submit feedback suggesting changes.": "请求更改，并提出更改意见。",
     "submit review": "提交审核",
+    "changes approved": "变更已获批准",
+    "some checks haven’t completed yet": "有些检查还没有完成",
+    "some checks were not successful": "有些检查不成功",
+    "all checks have passed": "所有检查均已通过",
+    "merging is blocked": "合并被阻止",
+    "the base branch restricts merging to authorized users.": "基础分支合并仅限于授权用户。",
+    "learn more about protected branches.": "了解有关受保护分支的更多信息。",
+    "you’re not": "您无",
+    "authorized": "权限",
+    "to merge this pull request.": "合并此拉取请求。",
+    "merged": "已合并",
+    "revert": "还原",
+    "closed with unmerged commits": "已关闭未合并的提交",
+    "delete branch": "删除分支",
+    "this pull request is closed, but the": "此拉取请求已关闭，但是",
+    "branch has unmerged commits. you can delete this branch if you wish.": "分支具有未合并的提交。您可以根据需要删除此分支。",
+    "if you wish, you can also delete this fork of": "如果需要，还可以删除此复刻",
+    "in the":"在",
+    "member": "成员",
+
+    "draft": "草案",
+    "ready for review": "准备审查",
+    "marked pull request as ready for review.":"已将此拉取请求标记为准备审查。",
+    "this branch has no conflicts with the base branch": "该分支与基本分支没有冲突",
+    "merging can be performed automatically.": "可以自动进行合并。",
+    "This branch cannot be rebased due to conflicts": "由于冲突，该分支不能变基",
+    "rebasing the commits of this branch on top of the base branch cannot be performed automatically due to conflicts encountered while reapplying the individual commits from the head branch.": "",
+    "create a merge commit": "创建合并提交",
+    "all commits from this branch will be added to the base branch via a merge commit.": "该分支的所有提交都将通过合并提交加入到基础分支中。",
+    "squash and merge": "压缩与合并",
+    "rebase and merge": "变基与合并",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
@@ -330,6 +373,7 @@
     "confirmed": "已确认",
     "we couldn’t find anything!": "这里空空如也！",
     "linked pull requests": "关联拉取请求",
+    "successfully merging a pull request may close this issue.": "成功合并一个拉取请求可能会关闭此议题。",
     "submit new issue": "提交新议题",
     "new pull request": "创建拉取请求",
     "close issue": "关闭议题",
@@ -567,6 +611,7 @@
 
     "commented": "评论于",
     "update comment": "更新评论",
+    "hide": "隐藏",
 
     "__comments-16": "Notification",
     "inbox": "收件箱",
