词典：仓库设置——危险区增补

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -386,14 +386,43 @@
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
     "change repository visibility": "更改仓库可见性",
+    "you cannot change the visibility of a fork. please": "您不能更改复刻仓库的可见性。请",
+    "duplicate the repository": "复制仓库",
     "change visibility": "更改可见性",
+    "warning: this is a potentially destructive action.": "警告：这是一个潜在的破坏性操作。",
     "this repository is currently public.": "该仓库当前是公有的",
+    "this repository is currently private.": "该仓库当前是私有的",
+    "make this repository visible to anyone.": "让任何人都能看到这个仓库。",
+    "make private": "转为私有",
+    "hide this repository from the public.": "向公众隐藏这个仓库。",
+    "i understand, change repository visibility.": "我明白了，依然更改仓库的可见性。",
     "transfer ownership": "转让所有权",
     "transfer": "转让",
-    "transfer this repository to another user or to an organization where you have the ability to create repositories.": "将此仓库转移到另一个用户或您可以创建仓库的组织。",
-    "mark this repository as archived and read-only.": "将此仓库标记为已存档和只读。",
+    "transfer this repository to another user or to an organization where you have the ability to create repositories.": "将此仓库转让给另一位用户或您可以创建仓库的组织。",
+    "transfer repository": "转让仓库",
+    "to understand admin access, teams, issue assignments, and redirects after a repository is transferred, see": "要了解仓库转让后的管理员访问、团队、问题分配和重定向，请参阅",
+    "transferring a repository": "转让仓库",
+    "in github help.": "在 GitHub 帮助中所示。",
+    "transferring may be delayed until the new owner approves the transfer.": "在新所有者批准接受转让之前，转让可能会延迟。",
+    "new owner’s github username or organization name": "新所有者的 GitHub 用户名或组织名称",
+    "type": "请键入",
+    "to confirm.": "进行确定。",
+    "i understand, transfer this repository.": "我明白了，依然转让这个仓库。",
     "archive this repository": "归档该仓库",
+    "mark this repository as archived and read-only.": "将此仓库标记为已存档和只读。",
+    "archive repository": "归档仓库",
+    "unexpected bad things will happen if you don’t read this!": "如果您不阅读此说明，将会发生意想不到的事情！",
+    "please type": "请键入",
+    "i understand the consequences, archive this repository": "我明白后果，依然存档这个仓库",
     "delete this repository": "删除该仓库",
+    "once you delete a repository, there is no going back. please be certain.": "一旦您删除了仓库，就再也无法恢复了。请确定。",
+    "are you absolutely sure?": "您完全确定吗？",
+    "this action": "该操作",
+    "cannot": "不能",
+    "be undone. this will permanently delete the": "被撤消。这将永久删除",
+    "repository, wiki, issues, comments, packages, secrets, workflow runs, and remove all collaborator associations.": "仓库、Wiki、议题、评论、包、机密、工作流程，并删除所有协作者关联。",
+    "this will not change your billing plan. if you want to downgrade, you can do so in your billing settings.": "这并不会更改您的结算方案。 如果您想降级，可以在结算设置中进行降级。",
+    "i understand the consequences, delete this repository": "我明白后果，依然删除这个仓库",
     "manage access": "访问管理",
     "who has access": "谁有权访问",
     "public repository": "公共仓库",
