--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -145,7 +145,9 @@
     "new project": "新建项目",
     "your profile": "个人资料",
     "your repositories": "我的仓库",
+    "your codespaces": "我的网页IDE",
     "your projects": "我的项目",
+    "your discussions": "我的讨论",
     "your stars": "我标星的仓库",
     "your gists": "我的代码片段",
     "upgrade": "升级",
@@ -640,7 +642,7 @@
     "issues options": "议题选项",
     "in the state": "状态",
     "open/closed": "打开/关闭",
-    "open": "打开",
+    "open": "开放",
     "closed": "关闭",
     "with this many comments": "有多少评论",
     "with the labels": "带有那些标签",
