--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -146,6 +146,8 @@
     "your profile": "个人资料",
     "your repositories": "我的仓库",
     "your projects": "我的项目",
+    "your organizations": "我的组织",
+    "your codespaces": "我的 Codespaces",
     "your stars": "我标星的仓库",
     "your gists": "我的代码片段",
     "upgrade": "升级",
