更改‘正在关注’为‘关注’ 更改‘至少15个字符’为‘至少需要15个字符’ ...
更加符合国人习惯的语法 而不是机翻

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -88,9 +88,9 @@
     "new to github?": "初次接触 GitHub？",
     "create an account": "新建账号",
     "make sure it's ": "确保",
-    "at least 15 characters": "至少15个字符",
+    "at least 15 characters": "至少需要15个字符",
     "or": " 或者 ",
-    "at least 8 characters": "至少8个字符",
+    "at least 8 characters": "至少需要8个字符",
     "including a number": "包括数字",
     "and a lowercase letter": "和小写字母",
     "learn more": "了解更多",
@@ -180,7 +180,7 @@
     "__comments-8": "User & Organization",
     "pinned": "置顶",
     "followers": "粉丝",
-    "following": "正在关注",
+    "following": "关注",
     "edit profile": "编辑个人资料",
     "follow": "关注",
     "unfollow": "取消关注",
