词典: '存储库'--> '仓库'

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -684,7 +684,7 @@
     "change notification settings": "更改通知设置",
     "you can change how you receive notifications from your account settings.": "您可以更改通过帐户设置接收通知的方式。",
     "unwatch suggestions": "取消关注建议",
-    "these repositories may be causing unnecessary notifications.": "这些存储库可能导致不必要的通知。",
+    "these repositories may be causing unnecessary notifications.": "这些仓库可能导致不必要的通知。",
     "unwatch all": "全部取消关注",
     "custom": "自定义",
     "customize": "自定义",
