词典: 中英文之间使用空格分隔，符号统一为中文全角

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -49,8 +49,8 @@
     "team": "团队",
     "enterprise": "企业",
     "pricing": "价格",
-    "search github": "搜索GitHub",
-    "why github?": "为何选择GitHub",
+    "search github": "搜索 GitHub",
+    "why github?": "为何选择 GitHub？",
     "built for developers": "专为开发者打造",
     "refresh": "刷新",
     "developers": "开发者",
@@ -65,7 +65,7 @@
     "collections": "集合",
     "trending": "趋势",
     "events": "事件",
-    "github sponsors": "GitHub赞助",
+    "github sponsors": "GitHub 赞助",
 
     "__comments-4": "Bottom",
     "terms": "服务条款",
@@ -84,7 +84,7 @@
     "sign up for github": "注册 GitHub",
     "sign in to github": "登录 GitHub",
     "username or email address": "用户名或邮箱",
-    "forgot password?": "忘记密码?",
+    "forgot password?": "忘记密码？",
     "new to github?": "初次接触 GitHub？",
     "create an account": "新建账号",
     "make sure it's ": "确保",
@@ -113,7 +113,7 @@
     "step 1": "第一步",
     "verify an email associated with this account.": "验证与该账户相关的电子邮箱。",
     "step 2": "第二步",
-    "verify a device, ssh key or personal access token.": "验证一个设备、SSH密钥或个人访问令牌。",
+    "verify a device, ssh key or personal access token.": "验证一个设备、SSH 密钥或个人访问令牌。",
     "step 3": "第三步",
     "github support will review your request": "GitHub Support 将审核您的请求",
     "within 3-5 business days": "在 3-5 个工作日内",
@@ -165,8 +165,8 @@
     "create an organization": "创建一个组织",
     "explore more →": "探索更多",
     "show more": "展示更多",
-    "working with a team?": "与团队合作?",
-    "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.": "GitHub是为协作而创建的。 建立组织以改善团队合作的方式，并获得更多功能。",
+    "working with a team?": "与团队合作？",
+    "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.": "GitHub 是为协作而创建的。 建立组织以改善团队合作的方式，并获得更多功能。",
 
     "__comments-7": "Search",
     "language:": " 编程语言:",
@@ -239,7 +239,7 @@
     "used by": "使用者",
     "contributor": "贡献者",
     "contributors": "贡献者",
-    "view license": "查看License",
+    "view license": "查看 License",
     "no releases published": "无发行版",
     "create a new release": "创建发行版",
     "no packages published": "未发布包",
@@ -250,14 +250,14 @@
     "(separate with spaces)": "（空格分隔）",
     "include in the home page": "包含在主页中",
     "clone": "克隆",
-    "clone with https": "HTTPS方式克隆",
-    "clone with ssh": "使用SSH方式克隆",
-    "use git or checkout with svn using the web url.": "使用Git或SVN通过该网址检出。",
-    "use a password-protected ssh key.": "使用受密码保护的SSH密钥。",
-    "use ssh": "使用SSH",
-    "use https": "使用HTTPS",
-    "open with github desktop": "用GitHub桌面客户端打开",
-    "download zip": "下载Zip压缩包",
+    "clone with https": "HTTPS 方式克隆",
+    "clone with ssh": "使用 SSH 方式克隆",
+    "use git or checkout with svn using the web url.": "使用 Git 或 SVN 通过该网址检出。",
+    "use a password-protected ssh key.": "使用受密码保护的 SSH 密钥。",
+    "use ssh": "使用 SSH",
+    "use https": "使用 HTTPS",
+    "open with github desktop": "用 GitHub 桌面客户端打开",
+    "download zip": "下载 Zip 压缩包",
     "this repository": "该仓库",
     "forked from": "复刻自",
 
@@ -439,7 +439,7 @@
     "you haven't invited any collaborators yet": "您尚未邀请任何协作者",
     "invite a collaborator": "邀请协作者",
     "integrations": "集成",
-    "installed github apps": "安装GitHub应用",
+    "installed github apps": "安装 GitHub 应用",
 
     "__comments-11": "Github settings",
     "settings": "设置",
@@ -453,7 +453,7 @@
     "security & analysis": "安全 & 分析",
     "emails": "电子邮箱",
     "billing": "账单",
-    "ssh and gpg keys": "SSH与GPG公钥",
+    "ssh and gpg keys": "SSH 与 GPG 公钥",
     "saved replies": "保存的回复",
     "applications": "应用",
     "developer settings": "开发者设置",
@@ -470,12 +470,12 @@
     "name": "名字",
     "public email": "公开邮箱",
     "bio": "个人简介",
-    "twitter username": "Twitter用户名",
+    "twitter username": "Twitter 用户名",
     "company": "公司",
     "location": "位置",
     "profile picture": "个人头像",
     "profile settings": "配置文件设置",
-    "display pro badge": "显示Pro徽章",
+    "display pro badge": "显示 Pro 徽章",
     "contributions": "贡献",
     "include private contributions on my profile": "在我的个人资料中显示私人共享",
     "github developer program": "GitHub 开发人员计划",
@@ -527,7 +527,7 @@
     "create a repository": "创建一个新的仓库",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
     "import a repository.": "导入仓库",
-    "import your project to github": "将你的仓库导入到GitHub",
+    "import your project to github": "将你的仓库导入到 GitHub",
     "import all the files, including the revision history, from another version control system.": "从其他版本控制系统导入所有文件，包括修订历史记录。",
     "your old repository’s clone url": "您的旧仓库的克隆地址",
     "learn more about the types of": "了解更多关于",
