1. 【复刻】关键字改为更加人性化的【复制】 2. 【Wiki】关键字 - > 【维基百科】

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -201,8 +201,8 @@
     "unstar": "取消星标",
     "watch": "关注",
     "unwatch": "取消关注",
-    "fork": "复刻",
-    "unfork": "取消复刻",
+    "fork": "复制",
+    "unfork": "取消复制",
     "new": "新建",
     "languages": "语言",
     "about": "关于",
@@ -259,17 +259,17 @@
     "open with github desktop": "用GitHub桌面客户端打开",
     "download zip": "下载Zip压缩包",
     "this repository": "该仓库",
-    "forked from": "复刻自",
+    "forked from": "复制自",
 
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
     "compare": "对比",
     "comparing changes": "比对差异",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
-    "compare across forks": "跨复刻比较",
+    "compare across forks": "跨复制比较",
     "compare changes": "比对差异",
     "compare changes across branches, commits, tags, and more below. if you need to, you can also": "比对不同分支、提交、标签等的差异。如果需要，你也可以",
-    "choose different branches or forks above to discuss and review changes.": "在上方选择其他分支或复刻以讨论和查看更改。",
+    "choose different branches or forks above to discuss and review changes.": "在上方选择其他分支或复制以讨论和查看更改。",
     "learn about pull requests": "了解拉取请求",
     "create pull request": "创建拉取请求",
     "comments": "评论",
@@ -342,7 +342,7 @@
     "delete branch": "删除分支",
     "this pull request is closed, but the": "此拉取请求已关闭，但是",
     "branch has unmerged commits. you can delete this branch if you wish.": "分支具有未合并的提交。您可以根据需要删除此分支。",
-    "if you wish, you can also delete this fork of": "如果需要，还可以删除此复刻",
+    "if you wish, you can also delete this fork of": "如果需要，还可以删除此复制",
     "in the":"在",
     "member": "成员",
 
@@ -386,7 +386,7 @@
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
     "change repository visibility": "更改仓库可见性",
-    "you cannot change the visibility of a fork. please": "您不能更改复刻仓库的可见性。请",
+    "you cannot change the visibility of a fork. please": "您不能更改复制仓库的可见性。请",
     "duplicate the repository": "复制仓库",
     "change visibility": "更改可见性",
     "warning: this is a potentially destructive action.": "警告：这是一个潜在的破坏性操作。",
@@ -420,7 +420,7 @@
     "this action": "该操作",
     "cannot": "不能",
     "be undone. this will permanently delete the": "被撤消。这将永久删除",
-    "repository, wiki, issues, comments, packages, secrets, workflow runs, and remove all collaborator associations.": "仓库、Wiki、议题、评论、包、机密、工作流程，并删除所有协作者关联。",
+    "repository, wiki, issues, comments, packages, secrets, workflow runs, and remove all collaborator associations.": "仓库、维基百科、议题、评论、包、机密、工作流程，并删除所有协作者关联。",
     "this will not change your billing plan. if you want to downgrade, you can do so in your billing settings.": "这并不会更改您的结算方案。 如果您想降级，可以在结算设置中进行降级。",
     "i understand the consequences, delete this repository": "我明白后果，依然删除这个仓库",
     "manage access": "访问管理",
@@ -540,7 +540,7 @@
     "search…": "搜索代码片段…",
     "back to github": "返回到 GitHub",
     "all gists": "所有片段",
-    "forked": "复刻",
+    "forked": "复制",
     "starred": "星标",
     "you don't have any starred gists yet.": "您还没有标星任何片段。",
     "your github profile": "我的 GitHub 个人资料",
@@ -572,7 +572,7 @@
     "delete": "删除",
     "revisions": "修订",
     "stars": "星标",
-    "forks": "复刻",
+    "forks": "复制",
     "raw": "源码",
     "revised": "修订",
     "created": "创建",
@@ -700,7 +700,7 @@
     "popular": "流行",
     "repositories options": "仓库选项",
     "with this many stars": "有多少星标",
-    "with this many forks": "有多少复刻",
+    "with this many forks": "有多少复制",
     "of this size": "仓库大小",
     "pushed to": "推送于何时",
     "with this license": "用何种许可证",
@@ -733,7 +733,7 @@
     "with this many followers": "有多少粉丝",
     "with this many public repositories": "有多少公共仓库",
     "working in this language": "工作于何种语言",
-    "wiki options": "Wiki 选项",
+    "wiki options": "维基百科选项",
 
     "__dict-end": "end"
   }
