--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -734,6 +734,98 @@
     "with this many public repositories": "有多少公共仓库",
     "working in this language": "工作于何种语言",
     "wiki options": "Wiki 选项",
+    
+    "Update": "更新",
+    "months ago": "个月前",
+    "bug report": "错误报告",
+    "feature request": "功能要求",
+    "question": "问题",
+    "open": "打开",
+    "Closed": "关闭",
+    "opened": "打开",
+    "days ago": "天前",
+    "Reviews": "评论",
+    "Find a Page": "查找一个页面",
+    "Clone this wiki locally": "在本地克隆这个维基",
+    "Wiki": "维基",
+    "Pages": "页面",
+    "Filter Issues": "过滤问题",
+    "Open issues and pull requests": "打开问题并拉取请求",
+    "Clear current search query, filters, and sorts": "清除当前搜索查询、筛选器和排序",
+    "Your issues": "你的问题",
+    "Your pull requests": "你的请求",
+    "Everything assigned to you": "所有分配给你的东西",
+    "Everything mentioning you": "所有提到你的",
+    "View advanced search synta": "查看高级搜索语法",
+    "Filter branches/tags ": "过滤器分支/标记",
+    "All activity": "所有活动",
+    "Success": "成功",
+    "Total duration": "总时间",
+    "pushed": "推送",
+    "There aren’t any open pull requests": "没有任何公开的拉取请求",
+    "You could search all of GitHub or try an": "你可以搜索所有的GitHub，或者尝试使用",
+    "Signed in as": "登录为",
+    "Set status": "设置状态",
+    "Your codespaces": "代码空间",
+    "Your discussions": "您的讨论",
+    "Jobs profile": "工作概况",
+    "Save jobs profile": "保存工作概况",
+    "No Preference": "没有偏好",
+    "Save Trending settings": "保存趋势设置",
+    "Update contributions": "更新贡献",
+    "Theme mode": "主题模式",
+    "GitHub will use your selected theme": "GitHub将使用你选择的主题",
+    "Single theme": "单一主题",
+    "Sync with system": "与系统同步",
+    "Default light": "默认白色",
+    "Default dark": "默认深色",
+    "Dark dimmed": "暗色主题",
+    "Emoji skin tone preference": "表情符号的肤色偏好",
+    "Day theme": "白天主题",
+    "Night theme": "夜间主题",
+    "Active": "积极",
+    "Sponsorship log": "赞助日志",
+    "New SSH key": "新的SSH密钥",
+    "New GPG key": "新的GPG密钥",
+    "keys": "密钥",
+    "Update profile": "更新配置文件",
+    "Deleted repositories": "删除仓库",
+    "Bytes": "字节数",
+    "collaborators": "合作者",
+    "Theme preferences": "主题偏好",
+    "Vigilant mode": "警戒模式",
+    "Learn about vigilant mode": "了解警戒模式",
+    "Email preferences": "电子邮件偏好",
+    "Backup email address": "备份电子邮件地址",
+    "Primary email address": "主要电子邮件地址",
+    "Add email address": "添加电子邮件地址",
+    "Add a custom sidebar": "添加自定义侧边栏",
+    "revisions": "修订",
+    "We'll use this language preference to filter the trending repository lists on 探索 and our Trending Repositories page": "我们将使用这个语言偏好来过滤探索和我们的趋势库页面上的趋势库列表",
+    "Building an application, service, or tool that integrates with GitHub? Join the GitHub Developer Program, or read more about it at our Developer site": "构建与 GitHub 集成的应用程序、服务或工具？加入GitHub开发者计划，或在我们的开发者网站上阅读更多相关信息",
+    "Check out the Developer site for guides, our API reference, and other resources for building applications that integrate with GitHub. Make sure your contact information is up-to-date below. Thanks for being a member": "查看开发者网站的指南、我们的API参考，以及其他用于构建与GitHub集成的应用程序的资源。请确保你的联系信息是最新的。谢谢你成为我们的会员",
+    "Get credit for all your work by showing the number of contributions to private repositories on your profile without any repository or organization information. Learn how we count contributions": "通过在你的个人资料上显示对私人资源库的贡献数量，为你的所有工作获得荣誉，而不需要任何资源库或组织信息。了解我们如何计算贡献",
+    "All of the fields on this page are optional and can be deleted at any time, and by filling them out, you're giving us consent to share this data wherever your user profile appears. Please see our privacy statement to learn more about how we use this information": "本页上的所有字段都是可选的，可以在任何时候删除，通过填写这些字段，你同意我们在你的用户资料出现的地方分享这些数据。请参阅我们的隐私声明，了解更多关于我们如何使用这些信息",
+    "You can @mention your company’s GitHub organization to link it": "你可以@提到你公司的GitHub组织来链接它",
+    "You can @mention other users and organizations to link to them": "你可以@提及其他用户和组织以链接他们",
+    "You have set your email address to private. To toggle email privacy, go to email settings and uncheck": "你已将你的电子邮件地址设置为隐私。要切换电子邮件隐私，请进入电子邮件设置并取消勾选",
+    "Keep my email address private": "保持我的电子邮件地址的私密性",
+    "Your name may appear around GitHub where you contribute or are mentioned. You can remove it at any time": "你的名字可能会出现在GitHub上你的贡献或被提及的地方。你可以在任何时候删除它",
+    "There are no SSH keys associated with your account": "没有与你的账户相关的SSH密钥",
+    "Check out our guide to generating SSH keys or troubleshoot common SSH problems": "查看我们的指南，生成SSH密钥或解决常见的SSH问题",
+    "There are no GPG keys associated with your account": "没有与你的账户相关的GPG密钥",
+    "Learn how to generate a GPG key and add it to your account": "了解如何生成GPG密钥并将其添加到你的账户中",
+    "Flag unsigned commits as unverified": "将无符号的提交标记为未验证的",
+    "This will include any commit attributed to your account but not signed with your GPG or S/MIME key": "这将包括任何归属于你的账户但没有用你的GPG或S/MIME密钥签名的提交",
+    "Note that this will include your existing unsigned commits": "请注意，这将包括你现有的未签名的提交",
+    "Repository default branch": "仓库的默认分支",
+    "Choose the default branch for your new personal repositories. You might want to change the default name due to different workflows, or because your integrations still require": "为你的新个人仓库选择默认分支。由于不同的工作流程，或者由于你的集成仍然需要，你可能想改变默认的名称",
+    "as the default branch name. You can always change the default branch name on individual repositories": "作为默认的分支名称,你可以随时改变单个仓库的默认分支名",
+    "Learn more about default branches": "了解更多关于默认分支的信息",
+    "Choose how GitHub looks to you. Select a single theme, or sync with your system and automatically switch between day and night themes": "选择GitHub在你眼中的样子。选择一个单一的主题，或者与你的系统同步，在白天和夜晚的主题之间自动切换",
+    "This theme will be active when your system is set to “light mode”": "当你的系统被设置为 '灯光模式' 时，这个主题将被激活",
+    "This theme will be active when your system is set to “dark mode”": "当你的系统被设置为 '黑暗模式' 时，这个主题将被激活",
+    "This is a list of devices that have logged into your account. Revoke any sessions that you do not recognize": "这是一个已经登录到你的账户设备的列表。撤销任何你不认识的会话",
 
     "__dict-end": "end"
   }
