新增了能凑合用的aria-label标签翻译 新增了一部分中文关键词 修改了一部分中文关键词中的错误

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -87,7 +87,7 @@
     "forgot password?": "忘记密码?",
     "new to github?": "初次接触 GitHub？",
     "create an account": "新建账号",
-    "make sure it's ": "确保",
+    "make sure it's": "确保",
     "at least 15 characters": "至少需要15个字符",
     "or": " 或者 ",
     "at least 8 characters": "至少需要8个字符",
@@ -158,10 +158,14 @@
     "overview": "概况",
     "repositories": "仓库",
     "projects": "项目",
+    "customize your pins": "自定义您的嵌入项目",
+    "contribution settings": "贡献设置",
+    "learn how we count contributions": "了解我们如何计算贡献",
     "recent activity": "最近动态",
     "all activity": "所有动态",
     "loading activity...": "加载动态中...",
     "more": "更多",
+    "less": "较少",
     "create an organization": "创建一个组织",
     "explore more →": "探索更多",
     "show more": "展示更多",
@@ -176,9 +180,16 @@
     "select language": "选择语言",
     "find a repository…": "搜索项目…",
     "search or jump to…": "搜索或跳转到…",
+    "jump to": "跳转到",
+    "best match": "最佳匹配",
+    "most stars": "最多星标",
+    "fewest stars": "最少星标",
+    "most forks": "最多复刻",
+    "fewest forks": "最少复刻",
 
     "__comments-8": "User & Organization",
     "pinned": "置顶",
+    "follower": "粉丝",
     "followers": "粉丝",
     "following": "关注",
     "edit profile": "编辑个人资料",
@@ -217,6 +228,8 @@
     "public": "公共",
     "private": "私有",
     "packages": "包",
+    "environments": "环境",
+    "active": "已激活",
     "secrets": "密钥",
     "security": "安全",
     "notifications": "通知",
@@ -227,6 +240,7 @@
     "insights": "统计",
     "actions": "操作",
     "releases": "发行版",
+    "latest": "最新",
     "add file": "添加文件",
     "create new file": "新建文件",
     "upload files": "上传文件",
@@ -260,6 +274,12 @@
     "download zip": "下载Zip压缩包",
     "this repository": "该仓库",
     "forked from": "复刻自",
+    "owns this repository": "拥有这个仓库",
+    "suggested:": "建议：",
+    "save changes": "保存更改",
+    "your repository details have been saved.": "您的存储库详细信息已保存。",
+    "committed to this repository in the past day": "过去一天致力于此存储库",
+    "committed to this repository in the past week": "过去一周致力于此存储库",
 
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
@@ -343,31 +363,59 @@
     "this pull request is closed, but the": "此拉取请求已关闭，但是",
     "branch has unmerged commits. you can delete this branch if you wish.": "分支具有未合并的提交。您可以根据需要删除此分支。",
     "if you wish, you can also delete this fork of": "如果需要，还可以删除此复刻",
-    "in the":"在",
+    "in the": "在",
     "member": "成员",
 
     "draft": "草案",
     "ready for review": "准备审查",
-    "marked pull request as ready for review.":"已将此拉取请求标记为准备审查。",
-    "this branch has no conflicts with the base branch": "该分支与基本分支没有冲突",
+    "marked pull request as ready for review.": "已将此拉取请求标记为准备审查。",
+    "this branch has no conflicts with the base branch": "该分支与基础分支没有冲突",
     "merging can be performed automatically.": "可以自动进行合并。",
-    "This branch cannot be rebased due to conflicts": "由于冲突，该分支不能变基",
-    "rebasing the commits of this branch on top of the base branch cannot be performed automatically due to conflicts encountered while reapplying the individual commits from the head branch.": "",
+    "this branch cannot be rebased due to conflicts": "由于冲突，该分支不能变基",
+    "rebasing the commits of this branch on top of the base branch cannot be performed automatically due to conflicts encountered while reapplying the individual commits from the head branch.": "由于在从头分支重新应用单个提交时遇到冲突，无法自动执行将此分支的提交重新设置在基础分支之上。",
     "create a merge commit": "创建合并提交",
     "all commits from this branch will be added to the base branch via a merge commit.": "该分支的所有提交都将通过合并提交加入到基础分支中。",
     "squash and merge": "压缩与合并",
     "rebase and merge": "变基与合并",
+    "learn more about pull requests": "了解有关拉取请求的更多信息",
+    "dismiss for this repository only": "仅在此存储库关闭",
+    "dismiss for all repositories": "在所有存储库关闭",
+    "there aren’t any open pull requests.": "没有任何开放的拉取请求。",
+    "no results matched your search.": "没有与您的搜索相符的结果。",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
     "open all": "打开全部",
     "author": "作者",
+    "filter by author": "按作者过滤",
     "labels": "标签",
     "label": "标签",
+    "filter by label": "按标签过滤",
+    "filter labels": "过滤标签",
+    "unlabeled": "没标签的",
     "milestones": "里程碑",
     "milestone": "里程碑",
+    "filter by milestone": "按里程碑过滤",
+    "filter milestones": "过滤里程碑",
+    "issues with no milestone": "没有里程碑的议题",
     "sort": "排序",
+    "sort by": "排序方式",
+    "newest": "最新的",
+    "oldest": "最旧的",
+    "most commented": "评论最多的",
+    "least commented": "评论最少的",
+    "most reactions": "反应最多",
+    "reviews": "审查",
+    "filter by reviews": "按审查过滤",
+    "no reviews": "没审查",
+    "review required": "需要审查",
+    "approved review": "批准审查",
+    "reviewed by you": "由您审查",
+    "awaiting review from you": "等待您审查",
+    "not reviewed by you": "未由您审查",
     "assignee": "受理人",
+    "assigned to nobody": "没分配给任何人",
+    "filter users": "过滤用户",
     "filter by who’s assigned": "按受理人筛选",
     "assignees": "受理人",
     "confirmed": "已确认",
@@ -381,7 +429,34 @@
     "lock conversation": "锁定对话",
     "pin issue": "固定议题",
     "transfer issue": "转移议题",
-    "delete issue": "刪除议题",
+    "welcome to issues!": "欢迎关注议题！",
+    "clear current search query, filters, and sorts": "清除当前的搜索查询、过滤器和排序",
+    "delete issue": "删除议题",
+    "filter issues": "过滤议题",
+    "open issues and pull requests": "开放的议题和拉取请求",
+    "your issues": "您的议题",
+    "your pull requests": "您的拉取请求",
+    "everything assigned to you": "所有分配给您的",
+    "everything mentioning you": "所有提到您的",
+    "view advanced search syntax": "查看高级搜索语法",
+    "label issues and pull requests for new contributors": "为新贡献者标记议题和拉取请求",
+    "issues are used to track todos, bugs, feature requests, and more. as issues are created, they’ll appear here in a searchable and filterable list. to get started, you should": "议题用于跟踪待办事项、错误、功能请求等。创建议题后，它们将显示在可搜索和可过滤的列表中。如果要开始，你应该",
+    "create an issue": "创建一个议题",
+    "something isn't working": "某些不能正常工作的问题",
+    "improvements or additions to documentation": "文档的改进或补充",
+    "this issue or pull request already exists": "此问题或拉取请求已存在",
+    "new feature or request": "新功能或请求",
+    "good for newcomers": "适合新人",
+    "extra attention is needed": "需要额外注意",
+    "this doesn't seem right": "这似乎不对",
+    "further information is requested": "要求提供更多信息",
+    "this will not be worked on": "这将不会被处理",
+    "alphabetically": "按字母顺序",
+    "reverse alphabetically": "按字母顺序倒序",
+    "most issues": "议题最多",
+    "fewest issues": "议题最少",
+    "search all labels": "搜索所有标签",
+    
 
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
@@ -519,6 +594,55 @@
     "sessions": "会话",
     "see more": "查看更多",
 
+    "template repository": "模板库",
+    "template repositories let users generate new repositories with the same directory structure and files.": "模板存储库允许用户生成具有相同目录结构和文件的新存储库。",
+    "social preview": "社交预览",
+    "upload an image to customize your repository’s social media preview.": "上传图像以自定义存储库的社交媒体预览。",
+    "images should be at least 640×320px (1280×640px for best display).": "图片至少应为 640×320 像素（1280×640 像素以获得最佳显示效果）。",
+    "download template": "下载模板",
+    "features": "功能",
+    "restrict editing to collaborators only": "仅限协作者进行编辑",
+    "public wikis will still be readable by everyone.": "公共wikis仍然可供所有人阅读。",
+    "issues integrate lightweight task tracking into your repository. keep projects on track with issue labels and milestones, and reference them in commit messages.": "问题将轻量级任务跟踪集成到您的存储库中。使用问题标签和里程碑保持项目正常运行，并在提交消息中引用它们。",
+    "get organized with issue templates": "使用问题模板进行组织",
+    "give contributors issue templates that help you cut through the noise and help them push your project forward.": "为贡献者提供问题模板，帮助您消除干扰并帮助他们推进您的项目。",
+    "set up templates": "设置模板",
+    "sponsorships": "赞助",
+    "sponsorships help your community know how to financially support this repository.": "赞助可帮助您的社区了解如何在财务上支持此存储库。",
+    "display a \"sponsor\" button": "显示“赞助商”按钮",
+    "add links to github sponsors or third-party methods your repository accepts for financial contributions to your project.": "添加指向 GitHub 赞助商或您的存储库接受的第三方方法的链接，以对您的项目进行财务贡献。",
+    "set up sponsor button": "设置赞助商按钮",
+    "project boards on github help you organize and prioritize your work. you can create project boards for specific feature work, comprehensive roadmaps, or even release checklists.": "GitHub 上的项目板帮助您组织工作和排列工作的优先级。 您可以为特定功能工作、全面的路线图甚至发布检查列表创建项目板。",
+    "preserve this repository": "保留这个存储库",
+    "include this code in the": "将此代码包含在",
+    "github archive program": "GitHub 存档计划中",
+    "table of contents": "目录",
+    "autogenerate table of contents for markdown files in this repository. the table of contents will be displayed near the top of the file.": "自动生成此存储库中 Markdown 文件的目录。目录将显示在文件顶部附近。",
+    "discussions is the space for your community to have conversations, ask questions and post answers without opening issues.": "讨论是您的社区进行对话、提问和发布答案而无需通过开放议题的地方。",
+    "get started with discussions": "开始讨论",
+    "engage your community by having discussions right in your repository, where your community already lives": "通过在您的社区已经存在的存储库中进行讨论来吸引您的社区",
+    "set up discussions": "建立讨论",
+    "merge button": "合并按钮",
+    "when merging pull requests, you can allow any combination of merge commits, squashing, or rebasing. at least one option must be enabled. if you have linear history requirement enabled on any protected branch, you must enable squashing or rebasing.": "合并拉取请求时，您可以允许合并提交、压缩或变基的任意组合。必须至少启用一个选项。如果您在任何受保护分支上启用了线性历史要求，则必须启用压缩或变基。",
+    "allow merge commits": "允许提交合并",
+    "add all commits from the head branch to the base branch with a merge commit.": "使用合并提交将所有从头部分支的提交添加到基础分支。",
+    "allow squash merging": "允许压缩合并",
+    "combine all commits from the head branch into a single commit in the base branch.": "将来自头部分支的所有提交合并到基础分支中的单个提交中。",
+    "allow rebase merging": "允许变基合并",
+    "add all commits from the head branch onto the base branch individually.": "将来自头部分支的所有提交单独添加到基础分支。",
+    "you can allow setting pull requests to merge automatically once all required reviews and status checks have passed.": "一旦所有必需的审查和状态检查都通过，您可以允许设置拉取请求自动合并。",
+    "allow auto-merge": "允许自动合并",
+    "waits for merge requirements to be met and then merges automatically.": "等待满足合并要求，然后自动合并。",
+    "after pull requests are merged, you can have head branches deleted automatically.": "合并拉取请求后，您可以自动删除头部分支。",
+    "automatically delete head branches": "自动删除头部分支",
+    "deleted branches will still be able to be restored.": "删除的分支仍然可以恢复。",
+    "archives": "档案",
+    "when creating source code archives, you can choose to include files stored using git lfs in the archive.": "创建源代码存档时，您可以选择在存档中包含使用 Git LFS 存储的文件。",
+    "include git lfs objects in archives": "在档案中包含 Git LFS 对象",
+    "git lfs usage in archives is billed at the same rate as usage with the client.": "归档中的 Git LFS 使用率与客户端的使用率相同。",
+    "pages settings now has its own dedicated tab!": "Pages 设置现在有其专用选项卡！",
+    "check it out here!": "看看这里！",
+
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
     "import a repository.": "导入仓库",
@@ -647,7 +771,7 @@
     "update comment": "更新评论",
     "hide": "隐藏",
 
-    "__comments-16": "Notification",
+    "__comments-17": "Notification",
     "inbox": "收件箱",
     "saved": "已保存",
     "save": "保存",
@@ -688,7 +812,16 @@
     "stop ignoring": "取消忽略",
     "back to notifications": "回到通知",
 
+    "__comments-18": "deployments",
+    "deployed to github-pages": "部署到 github-pages",
+    "view deployment": "查看部署",
+    "activity log": "活动记录",
+    "view full activity log": "查看完整的活动记录",
+    "show:": "显示:",
+    "all environments": "所有环境",
+
     "__comments-advanced-search": "Advanced search",
+    "you could try an": "您可以尝试",
     "advanced search": "高级搜索",
     "search": "搜索",
     "advanced options": "高级选项",
@@ -734,6 +867,9 @@
     "with this many public repositories": "有多少公共仓库",
     "working in this language": "工作于何种语言",
     "wiki options": "Wiki 选项",
+
+    "__comments-aria-label": "ariaLabel",
+    "you have unread notifications": "您有未读通知",
 
     "__dict-end": "end"
   }
