新增了一部分中文关键词

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -870,6 +870,7 @@
 
     "__comments-aria-label": "ariaLabel",
     "you have unread notifications": "您有未读通知",
+    "change your avatar":"更换您的头像",
 
     "__dict-end": "end"
   }
